
     New: Method to remove an entire sub-tree of annotations (the normal remove method removes group
          nodes while leaving their children in the collection.)
     New: Added an interpreter for null-terminated strings.
     New: Added interpreters for strings with unknown encoding (binary strings.)
     New: Holding shift when pressing the mouse will now extend the selection.

   Fixed: Adding a group annotation which contained further leaf annotations which should have overlapped
          were treated as not overlapping, so it was possible to end up with overlapping annotations.
   Fixed: Clicking above or below the vertical scrollbar handle pages properly instead of scrolling a very
          small distance which rounded down to nothing.

Version 0.6 (2014-06-24)

     New: Added a method to set the preferred visible row count so that you can make the viewer default
          to a larger (or smaller) size without having to calculate font sizes.
     New: Added a method to set the selection start and end at the same time.
     New: Added methods to assist in moving focus into the location bar.

   Fixed: Fixed the font specified in the UI not taking effect.
   Fixed: Fixed interpreting certain 64-bit values.
   Fixed: Fixed unexpected error clicking in the viewer before a binary was set.

 Changed: ExpandableAccessoryBar now animates when expanding or collapsing.
 Changed: Mutable* annotation classes were removed as it was starting to cause a combinatorial problem
          in the class hierarchy.
 Changed: Changed the default font for Mac OS X to Monaco 13pt.
 Changed: AnnotationCollectionListener now has separate events for added and removed. Logic for adding and
          removing has been moved up to AbstractAnnotationCollection to support this.
 Changed: Introduced MutableAnnotationCollection which enforces that added and removed annotations are
          also mutable (so that when doing add/remove, you can safely cast to the mutable sub-interface.)